fix client arrows spacing, add mixin and % for sass refactoring

--- a/sass/components/_services-section.scss
+++ b/sass/components/_services-section.scss
@@ -25,9 +25,13 @@
           column-count: 2;
   margin: 2em;
   @media only screen and (max-width: 600px) {
+    -webkit-column-count: 1;
+     -moz-column-count: 1;
+          column-count: 1;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    margin: 0;
   }
 }
 
@@ -41,8 +45,7 @@
   margin-right: 1em;
   font-size: .9em;
   @media only screen and (max-width: 600px) {
-    width: 100%;
-    margin: 0 20% 2em 0;
+    margin: 2em 4em 2em 4em;
   }
 }
 
@@ -51,8 +54,7 @@
   margin-left: 1em;
   font-size: .9em;
   @media only screen and (max-width: 600px) {
-    width: 100%;
-    margin: 0 20% 0 0;
+    margin: 0 4em 2em 4em;
   }
 }
 
